# PyClickr

./: .gitignore  CHANGELOG.md  LICENSE  PyClickr.spec  README.md  pyproject.toml  requirements.txt
.github/: build-binaries.yml  release.yml
.github/workflows/: build-binaries.yml  release.yml
assets/: settings.json
src/pyclickr/: __init__.py  app.py
